blur is too much so i fixed it

--- a/styles/infoboxes.css
+++ b/styles/infoboxes.css
@@ -17,7 +17,7 @@
       display: flex;
       text-decoration: none;
       background-color: #3a00979f;
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(8px);
       box-shadow: 0 0 50px 10px #1b0064;
       border-style: solid;
       border-width: 1px;
@@ -27,7 +27,7 @@
     }
     .selfinfobox:hover,.projectinfobox:hover,.thiswebinfo:hover
     {
-      backdrop-filter: blur(20px);
+      backdrop-filter: blur(12px);
       box-shadow: 0 0 50px 10px #3d009e;
     }
     .selfinfobox:active,.projectinfobox:active,.thiswebinfo:active
